[workspace]
members = ["crates/*"]

[package]
name = "yahps"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0"
description = "yet another high performance server for games written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.2.0"
async-trait = "0.1.77"
byteorder = "1.5.0"
bytes = "1.5.0"
dashmap = "5.5.3"
futures = "0.3.30"
log = "0.4.20"
num_cpus = "1.16.0"
num_enum = "0.7.2"
parking_lot = "0.12.1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11.14"
tokio = { version = "1.36.0", features = [
    "fs",
    "net",
    "io-util",
    "rt-multi-thread",
    "macros",
    "sync",
] }
