[package]
name = "yahps-rwproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
yahps = { path = "../.." }
tokio = { version = "1.36.0", features = [
    "fs",
    "net",
    "io-util",
    "rt-multi-thread",
    "macros",
    "sync",
] }
async-trait = "0.1.77"
log = "0.4.20"
byteorder = "1.5.0"
bytes = "1.5.0"
num_enum = "0.7.2"
env_logger = "0.11.2"
