[package]
name = "yahps-rwrproxy"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "high performance reverse proxy for Rusted Warfare written in Rust"

[dependencies]
yahps = { path = "../.." }
tokio = { version = "1.36.0", features = [
    "fs",
    "net",
    "io-util",
    "rt-multi-thread",
    "macros",
    "sync",
] }
async-trait = "0.1.77"
log = "0.4.20"
byteorder = "1.5.0"
bytes = "1.5.0"
num_enum = "0.7.2"
env_logger = "0.11.2"
clap = { version = "4.5.1", features = ["derive"] }
